force-app/main/default/objects/ContractLineItem/fields/CLI_FamilleDeProduits__c.field-meta.xml
<CustomField>
    <fullName>CLI_FamilleDeProduits__c</fullName>
    <label>Famille de produits</label>
    <type>TextArea</type>
</CustomField>