force-app/main/default/objects/ContractLineItem/fields/CLI_PlanDeMaintenance__c.field-meta.xml
<CustomField>
    <fullName>CLI_PlanDeMaintenance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de maintenance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MaintenancePlan.ServiceContractId</field>
            <operation>equals</operation>
            <valueField>$Source.ServiceContractId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MaintenancePlan</referenceTo>
    <relationshipLabel>Prestations</relationshipLabel>
    <relationshipName>Prestations</relationshipName>
    <type>Lookup</type>
</CustomField>