force-app/main/default/objects/ContractLineItem/fields/CLI_SousFamilleProduits__c.field-meta.xml
<CustomField>
    <fullName>CLI_SousFamilleProduits__c</fullName>
    <label>Sous Famille produits</label>
    <type>TextArea</type>
</CustomField>