force-app/main/default/objects/ContractLineItem/fields/PR_TECH_Quantite__c.field-meta.xml
<CustomField>
    <fullName>PR_TECH_Quantite__c</fullName>
    <description>Ne pas supprimer ce champ technique qui permet de faire fonctionner la règle de validation RV_QuantitePrestationNombreEntier</description>
    <formula>TEXT(Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR_TECH_Quantite</label>
    <type>Text</type>
</CustomField>