force-app/main/default/objects/ContractLineItem/fields/Tech_CAT__c.field-meta.xml
<CustomField>
    <fullName>Tech_CAT__c</fullName>
    <formula>ServiceContractId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_CAT</label>
    <type>Text</type>
</CustomField>