force-app/main/default/objects/ContractLineItem/validationRules/RV_QuantitePrestationNombreEntier_ancien.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_QuantitePrestationNombreEntier_ancien</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(PR_TECH_Quantite__c,&quot;[0-9]{1}&quot;))</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>La quantité doit être un chiffre ou un nombre entier.</errorMessage>
</ValidationRule>